all functions and objects completed

--- a/sales.html
+++ b/sales.html
@@ -7,7 +7,10 @@
   <title>Sales Page</title>
 </head>
 <body>
-  <a href="index.html">Home</a>
-  
+  <h1>Sales Data</h1>
+  <main id="data">
+    <a href="index.html">Home</a>
+  </main>
+  <script name="script" src="JS/app.js"></script>
 </body>
 </html>
