--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Salmon Cookies</title>
+  <title> Pat's Salmon Cookies</title>
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-  <a href="sales.html">sales page</a>
+  <header>
+    <img src="images/salmon.png" alt="a picture of a salmon" width="300" height="100">
+    <h1>Pat's Salmon Cookies</h1>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li><a href="sales.html">Sales Page</a></li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <div>
+      <p>Welcome to Pat's bakery</p>
+    </div>
+
+  </main>
+  
 </body>
 </html>
