--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
   <header>
-    <img src="images/salmon.png" alt="a picture of a salmon" width="300" height="100">
+    <img src="images/salmon.png" alt="a picture of a salmon" width="350" height="100">
     <h1>Pat's Salmon Cookies</h1>
     <nav>
       <ul>
-        <li>Home</li>
-        <li><a href="sales.html">Sales Page</a></li>
+        <li><Home href="index.html">Home</a></li>
+        <li><a href="sales.html">Sales Data</a></li>
         <li>Contact</li>
       </ul>
     </nav>
