--- a/sales.html
+++ b/sales.html
@@ -5,11 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sales Page</title>
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
+  <header>
+    <img src="images/salmon.png" alt="a picture of a salmon" width="350" height="100">
+    <h1>Pat's Salmon Cookies</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li>Sales Data</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+  </header>
   <h1>Sales Data</h1>
   <main id="data">
-    <a href="index.html">Home</a>
+
   </main>
   <script name="script" src="JS/app.js"></script>
 </body>
