--- a/sales.html
+++ b/sales.html
@@ -22,6 +22,17 @@
   <h1>Sales Data</h1>
   <main id="data">
 
+    <table id="sales">
+      <thead>
+        
+      </thead>
+      <tbody>
+   
+      </tbody>
+      <tfoot>
+        
+      </tfoot>
+    </table>
   </main>
   <script name="script" src="JS/app.js"></script>
 </body>
