--- a/index.html
+++ b/index.html
@@ -1,33 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Pat's Salmon Cookies</title>
+  <link rel="stylesheet" href="CSS/styles.css">  
   <link rel="stylesheet" href="CSS/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header>
-    <img src="images/salmon.png" alt="a picture of a salmon" width="350" height="100">
     <h1>Pat's Salmon Cookies</h1>
     <nav>
+      <img src="images/salmon.png" alt="a picture of a salmon" width="350" height="100">
       <ul>
-        <li><Home href="index.html">Home</a></li>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
         <li><a href="sales.html">Sales Data</a></li>
-        <li>Contact</li>
       </ul>
+      <img src="images/salmon.png" alt="a picture of a salmon" width="350" height="100">
     </nav>
   </header>
   <main>
-    <div>
-      <p>Welcome to Pat's bakery</p>
-    </div>
-
+    <img src="images/family.jpg" alt="A picture of Pat and his family smiling at the camera">
+    <img src="images/fish.jpg" alt="A group of four colorfully drawn fish" height="300" width="425">
+    <img src="images/cutter.jpeg" alt="a dolphin cookie cutter" height="300" width="425">
+    <section>
+      <h3>Hours</h3>
+      <p>
+        6 am - 3pm
+      </p>
+      <h3>Locations</h3>
+      <ul><li>Seattle, WA</li><li>Portland, OR</li><li>San Diego, CA</li></ul>
+      <h3>GET OUR MERCH</h3>
+    </section>
+    <img src="images/shirt.jpg" alt="pats merchandise shirt with a fish on it">
   </main>
-  
+  <footer> 
+    <img src="images/chinook.jpg" alt="">
+    <p>Contact us at 111-111-1111 or email us at patscrazysalmon@gmail.com</p> 
+    <img src="images/chinook.jpg" alt="">
+  </footer>
 </body>
+
 </html>
