--- a/sales.html
+++ b/sales.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sales Page</title>
+  <link rel="stylesheet" href="CSS/reset.css">  
   <link rel="stylesheet" href="CSS/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,19 +13,19 @@
 </head>
 <body>
   <header>
-    <img src="images/salmon.png" alt="a picture of a salmon" width="350" height="100">
     <h1>Pat's Salmon Cookies</h1>
     <nav>
+      <img src="images/salmon.png" alt="a picture of a salmon" width="350" height="100">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li>Sales Data</li>
-        <li>Contact</li>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li><a href="sales.html">Sales Data</a></li>
       </ul>
+      <img src="images/salmon.png" alt="a picture of a salmon" width="350" height="100">
     </nav>
   </header>
   <main id="data">
-    <h2>Sales Data</h2>
-
     <table id="sales">
       <thead>
         
