code review edits

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Pat's Salmon Cookies</title>
   <link rel="stylesheet" href="CSS/styles.css">  
-  <link rel="stylesheet" href="CSS/styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
@@ -40,7 +38,7 @@
       <ul><li>Seattle, WA</li><li>Portland, OR</li><li>San Diego, CA</li></ul>
       <h3>GET OUR MERCH</h3>
     </section>
-    <img src="images/shirt.jpg" alt="pats merchandise shirt with a fish on it">
+    <img src="images/shirt.jpg" alt="pats merchandise shirt with a fish on it" width="400">
   </main>
   <footer> 
     <img src="images/chinook.jpg" alt="">
