--- a/sales.html
+++ b/sales.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sales Page</title>
-  <link rel="stylesheet" href="CSS/reset.css">  
+  <link rel="stylesheet" href="CSS/reset.css">
   <link rel="stylesheet" href="CSS/styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <h1>Pat's Salmon Cookies</h1>
@@ -28,16 +28,35 @@
   <main id="data">
     <table id="sales">
       <thead>
-        
+
       </thead>
       <tbody>
-   
+
       </tbody>
       <tfoot>
-        
+
       </tfoot>
     </table>
+    <form>
+      <h3>Input a new city?</h3>
+      <fieldset>
+        <label for="location" placeholder="Seattle">Location
+          <input type ="text" id="location" name="location" required>
+        </label>
+        <label for="minCustomers">Minimum Number of Customers
+          <input id="minCustomers" name="minCustomers" type="number" required>
+        </label>
+        <label for="maxCustomers"> Maximum Number of Customers
+          <input id="maxCustomers" name="maxCustomers" type="number" required>
+        </label>
+        <label for="average">Average Number of Cookies Sold
+          <input id="average" name="average" type="number" required>
+        </label>
+        <input type="submit">
+      </fieldset>
+    </form>
   </main>
   <script name="script" src="JS/app.js"></script>
 </body>
+
 </html>
