--- a/sales.html
+++ b/sales.html
@@ -7,13 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sales Page</title>
   <link rel="stylesheet" href="CSS/reset.css">
+  <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="CSS/styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
   <header>
-    <h1>Pat's Salmon Cookies</h1>
+    <h2>Pat's Salmon Cookies</h2>
     <nav>
       <img src="images/salmon.png" alt="a picture of a salmon" width="350" height="100">
       <ul>
