--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Pat's Salmon Cookies</title>
-  <link rel="stylesheet" href="CSS/styles.css">  
-  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="CSS/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
@@ -27,22 +27,28 @@
   </header>
   <main>
     <img src="images/family.jpg" alt="A picture of Pat and his family smiling at the camera">
-    <img src="images/fish.jpg" alt="A group of four colorfully drawn fish" height="300" width="425">
-    <img src="images/cutter.jpeg" alt="a dolphin cookie cutter" height="300" width="425">
+    <div id="pictures">
+      <img src="images/fish.jpg" alt="A group of four colorfully drawn fish" height="200" width="200">
+      <img src="images/cutter.jpeg" alt="a dolphin cookie cutter" height="200" width="200">
+      <img src="images/shirt.jpg" alt="pats merchandise shirt with a fish on it" width="200">
+    </div>
     <section>
       <h3>Hours</h3>
       <p>
         6 am - 3pm
       </p>
       <h3>Locations</h3>
-      <ul><li>Seattle, WA</li><li>Portland, OR</li><li>San Diego, CA</li></ul>
+      <ul>
+        <li>Seattle, WA</li>
+        <li>Portland, OR</li>
+        <li>San Diego, CA</li>
+      </ul>
       <h3>GET OUR MERCH</h3>
     </section>
-    <img src="images/shirt.jpg" alt="pats merchandise shirt with a fish on it" width="400">
   </main>
-  <footer> 
+  <footer>
     <img src="images/chinook.jpg" alt="">
-    <p>Contact us at 111-111-1111 or email us at patscrazysalmon@gmail.com</p> 
+    <p>Contact us at 111-111-1111 or email us at patscrazysalmon@gmail.com</p>
     <img src="images/chinook.jpg" alt="">
   </footer>
 </body>
